@@ -50,7 +50,8 @@ For more information, see: \url{https://developers.facebook.com/docs/graph-api/r
 ## Getting page fans for date range
 ## (only owner or admin of page)
 insights <- getInsights(object_id='221568044327801',
-    token=fb_oauth, metric='page_fans', period='lifetime', parms='&since=2015-01-01&until=2015-01-31')
+    token=fb_oauth, metric='page_fans', period='lifetime',
+    parms='&since=2015-01-01&until=2015-01-31')
 ## Count of fans by country
   insights <- getInsights(object_id='221568044327801_754789777921289',
      token=fb_oauth, metric='page_fans_country', period='lifetime')
