@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.0): do not edit by hand
+% Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/getPage.R
 \name{getPage}
 \alias{getPage}
@@ -42,7 +42,7 @@ profile can also be retrieved with this function.
 ## (not only owner of page)
  page <- getPage(page="humansofnewyork", token=fb_oauth, feed=TRUE)
 ## Getting posts on Humans of New York page in January 2013
- page <- getPage(page="humansofnewyork", token=fb_oauth, n=1000
+ page <- getPage(page="humansofnewyork", token=fb_oauth, n=1000,
 		since='2013/01/01', until='2013/01/31')
 }
 }
